--- a/app/src/main/res/layout/day_forecast_item.xml
+++ b/app/src/main/res/layout/day_forecast_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -28,7 +29,11 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/hour_recycler"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:itemCount="5"
+            android:orientation="horizontal"
+            tools:listitem="@layout/forecast_item"/>
 
     </LinearLayout>
 </layout>
